# PicText-Studio

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CLAUDE.md  CONSTITUTION.md  Makefile  QWEN.md  README.md  docker-compose.yml  package-lock.json  report.md
.lovable/: plan.md
backend/: Dockerfile  alembic.ini  app.py  auth_config.py  constants.py  database.py  dependencies.py  exceptions.py  logger.py  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_table.py  002_create_templates_table.py  003_create_render_history_table.py  004_widen_templates_image_path.py  005_create_users.py  006_add_owner_to_history.py  007_add_user_role.py  008_add_user_blocked.py  009_add_template_is_active.py  009_alter_role_to_string.py  010_create_shared_images_table.py  011_add_missing_columns.py
backend/models/: __init__.py
backend/repositories/: __init__.py  base.py  render_history_repository.py  template_repository.py  user_repository.py
backend/routers/: __init__.py  api_keys.py  auth.py  favorites.py  health.py  history.py  profile_image.py  public.py  render.py  shares.py  templates.py  webhooks.py
backend/routers/admin/: __init__.py  stats.py  templates.py  users.py
backend/schemas/: __init__.py
backend/seeds/: create_admin.py  seed_templates.py
backend/services/: __init__.py  auth_service.py  cache_service.py  generate_nanoid.py  render_service.py  shared_image_service.py  template_service.py
backend/tests/: conftest.py  test_admin.py  test_auth_router.py  test_auth_service.py  test_cache_service.py  test_dependencies.py  test_health.py  test_history.py  test_integration.py  test_render.py  test_render_history_repository.py  test_render_rate_limit.py  test_render_service.py  test_template_repository.py  test_template_service.py  test_templates.py  test_user_repository.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend_old/: Dockerfile  alembic.ini  nginx.conf  package-lock.json  package.json  vite.config.ts
openspec/: config.yaml
(+180 files in other folders)
