[project]
name = "dl2026-backend"
version = "0.1.0"
description = "DL2026 Spring FSD2 Backend - FastAPI service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.30.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "asyncpg>=0.30.0",
    "redis>=5.0.0",
    "pillow>=11.0.0",
    "cairosvg>=2.7.0",
    "structlog>=24.0.0",
    "bcrypt<5",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "testcontainers[postgres,redis]>=4.0.0",
    "fakeredis>=2.26.0",
    "pytest-cov>=6.0.0",
    "greenlet>=3.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests/"]
disable_error_code = ["untyped-decorator", "attr-defined", "no-untyped-def"]

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["cairosvg.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "asyncpg",
    "fastapi.*",
    "jose",
    "jose.*",
    "passlib",
    "passlib.*",
    "redis.*",
    "structlog",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require real database connections (deselect with '-m \"not integration\"')",
]

[tool.setuptools]
packages = []

[dependency-groups]
dev = [
    "fakeredis>=2.34.1",
    "httpx>=0.28.1",
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.9",
]
